[Fix][Groups] Correction mobile pastille profile

--- a/css/mobile/_tablette.scss
+++ b/css/mobile/_tablette.scss
@@ -279,7 +279,7 @@
 
 
 	.account{
-		.avatar + h2{
+		.avatar + div{
 			margin: 25px 0 45px 100px;
 		}
 		.sheet h2{
